force-app/main/default/objects/ssot__MaterialityTopic__dlm/fields/ssot__ParentTopicId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentTopicId__c</fullName>
    <label>Parent Topic</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentTopicId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>