force-app/main/default/objects/ssot__MaterialityTopic__dlm/fields/ssot__rel_1731659056784_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659056784_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MaterialityTopic_ParentTopicId_map_M_rel</label>
    <referenceTo>ssot__MaterialityTopic__dlm</referenceTo>
    <relationshipLabel>MaterialityTopic_ParentTopicId_map_M_rel</relationshipLabel>
    <relationshipName>rel_1731659056784_end</relationshipName>
    <type>Lookup</type>
</CustomField>