force-app/main/default/objects/ssot__MaterialityTopic__dlm/fields/ssot__SortOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SortOrderNumber__c</fullName>
    <label>Sort Order</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SortOrderNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>